--- a/afclone/syslinux/archiso_pxe-linux.cfg
+++ b/afclone/syslinux/archiso_pxe-linux.cfg
@@ -1,9 +1,9 @@
 LABEL arch64_nbd
 TEXT HELP
-Boot the Arch Linux install medium using NBD.
+Boot the AFClone using NBD.
 It allows you to install Arch Linux or perform system maintenance.
 ENDTEXT
-MENU LABEL Arch Linux install medium (x86_64, NBD)
+MENU LABEL AFClone (x86_64, NBD)
 LINUX ::/%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 INITRD ::/%INSTALL_DIR%/boot/intel-ucode.img,::/%INSTALL_DIR%/boot/amd-ucode.img,::/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% archiso_nbd_srv=${pxeserver} cms_verify=y
@@ -11,10 +11,10 @@ SYSAPPEND 3
 
 LABEL arch64_nfs
 TEXT HELP
-Boot the Arch Linux live medium using NFS.
+Boot the AFClone using NFS.
 It allows you to install Arch Linux or perform system maintenance.
 ENDTEXT
-MENU LABEL Arch Linux install medium (x86_64, NFS)
+MENU LABEL AFClone (x86_64, NFS)
 LINUX ::/%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 INITRD ::/%INSTALL_DIR%/boot/intel-ucode.img,::/%INSTALL_DIR%/boot/amd-ucode.img,::/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archiso_nfs_srv=${pxeserver}:/run/archiso/bootmnt cms_verify=y
@@ -22,10 +22,10 @@ SYSAPPEND 3
 
 LABEL arch64_http
 TEXT HELP
-Boot the Arch Linux live medium using HTTP.
+Boot the AFClone using HTTP.
 It allows you to install Arch Linux or perform system maintenance.
 ENDTEXT
-MENU LABEL Arch Linux install medium (x86_64, HTTP)
+MENU LABEL AFClone (x86_64, HTTP)
 LINUX ::/%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 INITRD ::/%INSTALL_DIR%/boot/intel-ucode.img,::/%INSTALL_DIR%/boot/amd-ucode.img,::/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archiso_http_srv=http://${pxeserver}/ cms_verify=y
